fix: 이미지 css 수정 및 prism css 추가

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -191,4 +191,4 @@ figcaption {
   min-width: 100%; /* 2 */
 }
 
-@import "~prismjs/themes/prism-solarizedlight.css";
+// @import "~prismjs/themes/prism-twilight.css";
