--- a/css/prismjs/prism.css
+++ b/css/prismjs/prism.css
@@ -1,5 +1,3 @@
-/* PrismJS 1.23.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -12,7 +10,6 @@ pre[class*="language-"] {
 	background: none;
 	text-shadow: 0 1px white;
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-	font-size: 1em;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -79,7 +76,7 @@ pre[class*="language-"] {
 	color: #999;
 }
 
-.token.namespace {
+.namespace {
 	opacity: .7;
 }
 
@@ -107,8 +104,7 @@ pre[class*="language-"] {
 .token.url,
 .language-css .token.string,
 .style .token.string {
-	color: #9a6e3a;
-	/* This background color was intended by the author of this theme. */
+	color: #a67f59;
 	background: hsla(0, 0%, 100%, .5);
 }
 
@@ -118,8 +114,7 @@ pre[class*="language-"] {
 	color: #07a;
 }
 
-.token.function,
-.token.class-name {
+.token.function {
 	color: #DD4A68;
 }
 
@@ -140,4 +135,3 @@ pre[class*="language-"] {
 .token.entity {
 	cursor: help;
 }
-
